--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -55,6 +55,7 @@
 
 // 3rd party plugin styles
 @import "5-vendor/simplebar";
+@import "5-vendor/overlay";
 
 // date range picker
 @import '~bootstrap-daterangepicker/daterangepicker.css';
